--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>martPlase</title>
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-    
+
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a class="header__logo" href="#">
+                    <img class="header__logo-img" src="img/MartPlace.png" alt="">
+                </a>
+                <a class="header__become" href="#">Become a Seller</a>
+                <div class="header__icons">
+                    <button class="header__noti">
+                        <img class="header__noti-img" src="img/alarm.svg" alt="">
+                    </button>
+                    <button class="header__mail">
+                        <img class="header__mail-img" src="img/envelope.svg" alt="">
+                    </button>
+                    <button class="header__cart">
+                        <img class="header__cart-img" src="img/cart.svg" alt="">
+                    </button>
+                </div>
+                <a class="header__profile" href="#">
+                    <img class="profile__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                    <div class="profile__info">
+                        <div class="profile__name">Taofiq Hakim
+                            <span class="profile__money">$20.45</span>
+                        </div>
+                    </div>
+                </a>
+
+            </div>
+        </div>
+    </header>
+
+    <nav class="navigation">
+        <div class="container">
+            <div class="navigation__inner">
+                <ul class="navigation__menu">
+                    <li class="navigation__points">HOME</li>
+                    <li class="navigation__points">all products</li>
+                    <li class="navigation__points">wordpress</li>
+                    <li class="navigation__points">festures</li>
+                    <li class="navigation__points">Pages</li>
+                </ul>
+            </div>
+
+            <div class="search__inner">
+                <form class="search__form">
+                    <input class="search__form-input" type="text" placeholder="Search product here...">
+                    <button class="search__form-btn" type="submit"></button>
+                </form>
+            </div>
+
+        </div>
+
+    </nav>
+    <section class="create">
+        
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.min.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
