--- a/app/index.html
+++ b/app/index.html
@@ -20,21 +20,21 @@
                 </a>
                 <a class="header__become" href="#">Become a Seller</a>
                 <div class="header__icons">
-                    <button class="header__noti">
-                        <img class="header__noti-img" src="img/alarm.svg" alt="">
+                    <button class="header__icons-noti">
+                        <img class="header__icons-noti-img" src="img/alarm.svg" alt="">
                     </button>
-                    <button class="header__mail">
-                        <img class="header__mail-img" src="img/envelope.svg" alt="">
+                    <button class="header__icons-mail">
+                        <img class="header__icons-mail-img" src="img/envelope.svg" alt="">
                     </button>
-                    <button class="header__cart">
-                        <img class="header__cart-img" src="img/cart.svg" alt="">
+                    <button class="header__icons-cart">
+                        <img class="header__icons-cart-img" src="img/cart.svg" alt="">
                     </button>
                 </div>
                 <a class="header__profile" href="#">
-                    <img class="profile__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
-                    <div class="profile__info">
-                        <div class="profile__name">Taofiq Hakim
-                            <span class="profile__money">$20.45</span>
+                    <img class="header__profile-img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                    <div class="header__profile-info">
+                        <div class="header__profile-name">Taofiq Hakim
+                            <span class="header__profile-money">$20.45</span>
                         </div>
                     </div>
                 </a>
@@ -57,7 +57,7 @@
 
             <div class="search__inner">
                 <form class="search__form">
-                    <input class="search__form-input" type="text" placeholder="Search product here...">
+                    <input class="search__form-input" type="text" placeholder="Search product here..." required>
                     <button class="search__form-btn" type="submit"></button>
                 </form>
             </div>
@@ -66,7 +66,81 @@
 
     </nav>
     <section class="create">
-        
+        <div class="container">
+
+            <div class="create__subtitle">
+                Create Your Own
+            </div>
+            <div class="create__title">
+                Digital Product Marketplace
+            </div>
+            <div class="create__text">
+                MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products
+            </div>
+            <a href="#" class="create__links create__links-all">
+                View All Products
+            </a>
+            <a href="#" class="create__links create__links-popular">
+                Popular Products
+            </a>
+
+            <div class="create__search">
+                <div class="create__search-inner">
+                    <form class="create__search-form">
+
+                        <input class="create__search-input" type="text" placeholder="Search your products..." required>
+                        <ul class="create__search-categories"> <span> All </span>Categories
+                            <li class="create__search-category">first</li>
+                            <li class="create__search-category">second</li>
+                            <li class="create__search-category">third</li>
+                            <li class="create__search-category">fourth</li>
+                            <li class="create__search-category">fifth</li>
+                        </ul>
+
+                        <button class="create__search-btn" type="submit">Search Now</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="reason">
+        <div class="container">
+            <div class="reason__inner">
+                <div class="reason__item">
+                    <img src="img/reason-img.jpg" alt="">
+                    <div class="reason__title">
+                        Best UX Research
+                    </div>
+                    <div class="reason__text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+                <div class="reason__item">
+                    <img src="img/reason-img1.jpg" alt="">
+                    <div class="reason__title">
+                        Fully Responsive
+                    </div>
+                    <div class="reason__text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+                <div class="reason__item">
+                    <img src="img/reason-img2.jpg" alt="">
+                    <div class="reason__title">
+                        Buy & Sell Easily
+                    </div>
+                    <div class="reason__text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
