--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>martPlase</title>
-    <link rel="stylesheet" href="css/libs.min.css">
+    <link rel="stylesheet" href="css/_libs.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -89,14 +89,15 @@
                     <form class="create__search-form">
 
                         <input class="create__search-input" type="text" placeholder="Search your products..." required>
-                        <ul class="create__search-categories"> <span> All </span>Categories
-                            <li class="create__search-category">first</li>
-                            <li class="create__search-category">second</li>
-                            <li class="create__search-category">third</li>
-                            <li class="create__search-category">fourth</li>
-                            <li class="create__search-category">fifth</li>
-                        </ul>
-
+                        <div class="create__search-click"> <span> All </span>Categories
+                            <ul class="create__search-categories">
+                                <li class="create__search-category">first</li>
+                                <li class="create__search-category">second</li>
+                                <li class="create__search-category">third</li>
+                                <li class="create__search-category">fourth</li>
+                                <li class="create__search-category">fifth</li>
+                            </ul>
+                        </div>
                         <button class="create__search-btn" type="submit">Search Now</button>
                     </form>
                 </div>
@@ -142,11 +143,172 @@
             </div>
         </div>
     </section>
+    <section class="products">
+        <div class="container">
+            <div class="products__inner">
+                <div class="products__title title">
+                    <div class="products__title-text">Your Followers Feed</div>
+                </div>
+
+                <div class="products__slider">
+
+                    <div class="slider__product">
+                        <a href="#"><img class="slider__product-img" src="img/product-item.jpg" alt=""></a>
+                        
+
+                        <div class="slider__product-content">
+                            <div class="slider__product-title">
+                                One Page Resume Template
+                            </div>
+                            <a class="slider__product-author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="slider__product-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the
+                                mattis, leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent
+                                pharetra,
+                                justo ut scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.
+                            </div>
+                            <div class="slider__product-tags">
+                                <a class="slider-tag tag" href="#">website</a>
+                                <a class="slider-tag tag1" href="#">plugin</a>
+                                <a class="slider-tag tag2" href="#">landing page</a>
+
+                            </div>
+                            <div class="slider__product-info">
+                                <div class="slider__product-price">$10-$50</div>
+                                46 <span class="slider__product-span">634</span>
+                                <div class="slider__product-stars">
+                                    <div class="rate-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="slider__product">
+                        <a href="#"><img class="slider__product-img" src="img/product-item.jpg" alt=""></a>
+
+                        <div class="slider__product-content">
+                            <div class="slider__product-title">
+                                One Page Resume Template
+                            </div>
+                            <a class="slider__product-author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="slider__product-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the
+                                mattis, leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent
+                                pharetra,
+                                justo ut scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.
+                            </div>
+                            <div class="slider__product-tags">
+                                <a class="slider-tag tag" href="#">website</a>
+                                <a class="slider-tag tag1" href="#">plugin</a>
+                                <a class="slider-tag tag2" href="#">landing page</a>
+
+                            </div>
+                            <div class="slider__product-info">
+                                <div class="slider__product-price">$10-$50</div>
+                                46 <span class="slider__product-span">634</span>
+                                <div class="slider__product-stars">
+                                    <div class="rate-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="slider__product">
+                        <a href="#"><img class="slider__product-img" src="img/product-item.jpg" alt=""></a>
+
+                        <div class="slider__product-content">
+                            <div class="slider__product-title">
+                                One Page Resume Template
+                            </div>
+                            <a class="slider__product-author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="slider__product-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the
+                                mattis, leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent
+                                pharetra,
+                                justo ut scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.
+                            </div>
+                            <div class="slider__product-tags">
+                                <a class="slider-tag tag" href="#">website</a>
+                                <a class="slider-tag tag1" href="#">plugin</a>
+                                <a class="slider-tag tag2" href="#">landing page</a>
+
+                            </div>
+                            <div class="slider__product-info">
+                                <div class="slider__product-price">$10-$50</div>
+                                46 <span class="slider__product-span">634</span>
+                                <div class="slider__product-stars">
+                                    <div class="rate-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="slider__product">
+                        <a href="#"><img class="slider__product-img" src="img/product-item.jpg" alt=""></a>
+
+                        <div class="slider__product-content">
+                            <div class="slider__product-title">
+                                One Page Resume Template
+                            </div>
+                            <a class="slider__product-author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="slider__product-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the
+                                mattis, leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent
+                                pharetra,
+                                justo ut scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.
+                            </div>
+                            <div class="slider__product-tags">
+                                <a class="slider-tag tag" href="#">website</a>
+                                <a class="slider-tag tag1" href="#">plugin</a>
+                                <a class="slider-tag tag2" href="#">landing page</a>
+
+                            </div>
+                            <div class="slider__product-info">
+                                <div class="slider__product-price">$10-$50</div>
+                                46 <span class="slider__product-span">634</span>
+                                <div class="slider__product-stars">
+                                    <div class="rate-star"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
