--- a/app/index.html
+++ b/app/index.html
@@ -154,7 +154,7 @@
 
                     <div class="slider__product">
                         <a href="#"><img class="slider__product-img" src="img/product-item.jpg" alt=""></a>
-                        
+
 
                         <div class="slider__product-content">
                             <div class="slider__product-title">
@@ -164,6 +164,7 @@
                                 <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
                                 <div class="author__name">AazzTech</div>
                                 <span class="author__tech">
+                                    <img class="author__tech-img" src="img/wordpres.svg" alt="">
                                     WordPress
                                 </span>
                             </a>
@@ -201,6 +202,7 @@
                                 <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
                                 <div class="author__name">AazzTech</div>
                                 <span class="author__tech">
+                                    <img class="author__tech-img" src="img/wordpres.svg" alt="">
                                     WordPress
                                 </span>
                             </a>
@@ -238,6 +240,7 @@
                                 <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
                                 <div class="author__name">AazzTech</div>
                                 <span class="author__tech">
+                                    <img class="author__tech-img" src="img/wordpres.svg" alt="">
                                     WordPress
                                 </span>
                             </a>
@@ -275,6 +278,7 @@
                                 <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
                                 <div class="author__name">AazzTech</div>
                                 <span class="author__tech">
+                                    <img class="author__tech-img" src="img/wordpres.svg" alt="">
                                     WordPress
                                 </span>
                             </a>
@@ -306,10 +310,295 @@
         </div>
     </section>
 
+    <section class="newest">
+        <div class="container">
+            <div class="newest__inner">
+                <div class="newest__title title">
+                    <div class="newest__title-text">Your Followers Feed</div>
+                    <div class="newest__filter">Filter by:
+                        <div class="newest__filter-dots">
+                            <div class="newest__filter-dot"></div>
+                            <div class="newest__filter-dot"></div>
+                            <div class="newest__filter-dot"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="newest__tags">
+                    <button class="newest__tag" type="button" data-filter=".category-plugins">Plugins</button>
+                    <button class="newest__tag" type="button" data-filter=".category-wordpress">WordPress</button>
+                    <button class="newest__tag" type="button" data-filter=".category-site-template">Site
+                        Template</button>
+                    <button class="newest__tag" type="button" data-filter=".category-psd-template">PSD Template</button>
+                    <button class="newest__tag" type="button" data-filter=".category-joomla">Joomla</button>
+                    <button class="newest__tag" type="button" data-filter=".category-user-interface">User
+                        Interface</button>
+                    <button class="newest__tag" type="button" data-filter=".category-landing-page">Landing Page</button>
+                    <button class="newest__tag" type="button" data-filter=".category-software">Software</button>
+                </div>
+                <div class="newest__inner-box">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/libs.min.js"></script>
-    <script src="js/main.js"></script>
+                    <div class="newest__card card mix category-wordpress" data-order="1">
+                        <a class="card__link" href="#">
+                            <a href="#" class="more">
+                                More Info
+                            </a>
+                            <a href="#" class="live">
+                                Live Demo
+                            </a>
+
+                            <img class="img" src="img/ducks-bg.jpg" alt="">
+                        </a>
+
+
+                        <div class="content">
+                            <div class="content__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <a class="author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    <img class="author__tech-img" src="img/wordpres.svg" alt="">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="info__price">$20</div>
+                            90
+                            <div class="info__stars">
+                                <div class="rate-star"></div>
+                            </div>
+                            <span class="info__span">246</span>
+                        </div>
+
+
+                    </div>
+
+                    <div class="newest__card card mix category-psd-template" data-order="2">
+                        <a class="card__link" href="#">
+                            <a href="#" class="more">
+                                More Info
+                            </a>
+                            <a href="#" class="live">
+                                Live Demo
+                            </a>
+
+                            <img class="img" src="img/ducks-bg.jpg" alt="">
+                        </a>
+
+
+                        <div class="content">
+                            <div class="content__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <a class="author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    <img class="author__tech-img" src="img/psd.svg" alt="">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="info__price">$20</div>
+                            90
+                            <div class="info__stars">
+                                <div class="rate-star"></div>
+                            </div>
+                            <span class="info__span">246</span>
+                        </div>
+
+
+                    </div>
+
+                    <div class="newest__card card mix category-site-template" data-order="3">
+                        <a class="card__link" href="#">
+                            <a href="#" class="more">
+                                More Info
+                            </a>
+                            <a href="#" class="live">
+                                Live Demo
+                            </a>
+
+                            <img class="img" src="img/ducks-bg.jpg" alt="">
+                        </a>
+
+
+                        <div class="content">
+                            <div class="content__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <a class="author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    <img class="author__tech-img" src="img/html.png" alt="">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="info__price">$20</div>
+                            90
+                            <div class="info__stars">
+                                <div class="rate-star"></div>
+                            </div>
+                            <span class="info__span">246</span>
+                        </div>
+
+
+                    </div>
+
+                    <div class="newest__card card mix category-site-template" data-order="4">
+                        <a class="card__link" href="#">
+                            <a href="#" class="more">
+                                More Info
+                            </a>
+                            <a href="#" class="live">
+                                Live Demo
+                            </a>
+
+                            <img class="img" src="img/ducks-bg.jpg" alt="">
+                        </a>
+
+
+                        <div class="content">
+                            <div class="content__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <a class="author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    <img class="author__tech-img" src="img/html.png" alt="">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="info__price">$20</div>
+                            90
+                            <div class="info__stars">
+                                <div class="rate-star"></div>
+                            </div>
+                            <span class="info__span">246</span>
+                        </div>
+
+
+                    </div>
+
+                    <div class="newest__card card mix category-wordpress" data-order="5">
+                        <a class="card__link" href="#">
+                            <a href="#" class="more">
+                                More Info
+                            </a>
+                            <a href="#" class="live">
+                                Live Demo
+                            </a>
+
+                            <img class="img" src="img/ducks-bg.jpg" alt="">
+                        </a>
+
+
+                        <div class="content">
+                            <div class="content__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <a class="author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    <img class="author__tech-img" src="img/wordpres.svg" alt="">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="info__price">$20</div>
+                            90
+                            <div class="info__stars">
+                                <div class="rate-star"></div>
+                            </div>
+                            <span class="info__span">246</span>
+                        </div>
+
+
+                    </div>
+
+                    <div class="newest__card card mix category-psd-template" data-order="6">
+                        <a class="card__link" href="#">
+                            <a href="#" class="more">
+                                More Info
+                            </a>
+                            <a href="#" class="live">
+                                Live Demo
+                            </a>
+
+                            <img class="img" src="img/ducks-bg.jpg" alt="">
+                        </a>
+
+
+                        <div class="content">
+                            <div class="content__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <a class="author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    <img class="author__tech-img" src="img/psd.svg" alt="">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="info__price">$20</div>
+                            90
+                            <div class="info__stars">
+                                <div class="rate-star"></div>
+                            </div>
+                            <span class="info__span">246</span>
+                        </div>
+
+
+                    </div>
+                </div>
+                <button class="newest__tag newest__tag-bottom" type="button" data-filter="all">All New Products</button>
+
+            </div>
+        </div>
+        </sectin>
+
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="js/libs.min.js"></script>
+        <script src="js/main.js"></script>
 </body>
 
 </html>
