--- a/app/index.html
+++ b/app/index.html
@@ -593,12 +593,245 @@
 
             </div>
         </div>
-        </sectin>
+    </section>
+
+    <section class="followers">
+        <div class="container">
+            <div class="followers__inner">
+                <div class="followers__title title">
+                    Your Followers Feed
+                </div>
 
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="js/libs.min.js"></script>
-        <script src="js/main.js"></script>
+                <div class="followers-slider__inner">
+
+                    <div class="followers-slider__card card">
+                        <a class="card__link" href="#">
+                            <a href="#" class="more">
+                                More Info
+                            </a>
+                            <a href="#" class="live">
+                                Live Demo
+                            </a>
+
+                            <img class="img" src="img/ducks-bg.jpg" alt="">
+                        </a>
+
+
+                        <div class="content">
+                            <div class="content__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <a class="author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    <img class="author__tech-img" src="img/psd.svg" alt="">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="info__price">$20</div>
+                            90
+                            <div class="info__stars">
+                                <div class="rate-star"></div>
+                            </div>
+                            <span class="info__span">246</span>
+                        </div>
+
+
+                    </div>
+
+                    <div class="followers-slider__card card">
+                        <a class="card__link" href="#">
+                            <a href="#" class="more">
+                                More Info
+                            </a>
+                            <a href="#" class="live">
+                                Live Demo
+                            </a>
+
+                            <img class="img" src="img/ducks-bg.jpg" alt="">
+                        </a>
+
+
+                        <div class="content">
+                            <div class="content__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <a class="author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    <img class="author__tech-img" src="img/psd.svg" alt="">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="info__price">$20</div>
+                            90
+                            <div class="info__stars">
+                                <div class="rate-star"></div>
+                            </div>
+                            <span class="info__span">246</span>
+                        </div>
+
+
+                    </div>
+
+                    <div class="followers-slider__card card">
+                        <a class="card__link" href="#">
+                            <a href="#" class="more">
+                                More Info
+                            </a>
+                            <a href="#" class="live">
+                                Live Demo
+                            </a>
+
+                            <img class="img" src="img/ducks-bg.jpg" alt="">
+                        </a>
+
+
+                        <div class="content">
+                            <div class="content__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <a class="author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    <img class="author__tech-img" src="img/psd.svg" alt="">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="info__price">$20</div>
+                            90
+                            <div class="info__stars">
+                                <div class="rate-star"></div>
+                            </div>
+                            <span class="info__span">246</span>
+                        </div>
+
+
+                    </div>
+
+                    <div class="followers-slider__card card">
+                        <a class="card__link" href="#">
+                            <a href="#" class="more">
+                                More Info
+                            </a>
+                            <a href="#" class="live">
+                                Live Demo
+                            </a>
+
+                            <img class="img" src="img/ducks-bg.jpg" alt="">
+                        </a>
+
+
+                        <div class="content">
+                            <div class="content__title">
+                                E-commerce Shopping Cart
+                            </div>
+                            <a class="author" href="#">
+                                <img class="author__img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="author__name">AazzTech</div>
+                                <span class="author__tech">
+                                    <img class="author__tech-img" src="img/psd.svg" alt="">
+                                    WordPress
+                                </span>
+                            </a>
+                            <div class="text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                the mattis, leo quam aliquet congue.
+                            </div>
+                        </div>
+                        <div class="info">
+                            <div class="info__price">$20</div>
+                            90
+                            <div class="info__stars">
+                                <div class="rate-star"></div>
+                            </div>
+                            <span class="info__span">246</span>
+                        </div>
+
+
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+    <section class="statistics">
+        <div class="container">
+            <div class="statistics__inner">
+                <div class="statistics__paragraph statistics__paragraph-briefcase">
+                    <img src="img/briefcase.svg" alt="" class="statistics__paragraph-img">
+                    <div class="statistics__paragraph-title">
+                        38,463
+                    </div>
+                    <div class="statistics__paragraph-text">
+                        items for sale
+                    </div>
+                </div>
+
+                <div class="statistics__paragraph statistics__paragraph-cloud">
+                    <img src="img/cloud-download.svg" alt="" class="statistics__paragraph-img">
+                    <div class="statistics__paragraph-title">
+                        38,463
+                    </div>
+                    <div class="statistics__paragraph-text">
+                        items for sale
+                    </div>
+                </div>
+
+                <div class="statistics__paragraph statistics__paragraph-smile">
+                    <img src="img/smile.svg" alt="" class="statistics__paragraph-img">
+                    <div class="statistics__paragraph-title">
+                        38,463
+                    </div>
+                    <div class="statistics__paragraph-text">
+                        items for sale
+                    </div>
+                </div>
+
+                <div class="statistics__paragraph statistics__paragraph-users">
+                    <img src="img/users.svg" alt="" class="statistics__paragraph-img">
+                    <div class="statistics__paragraph-title">
+                        38,463
+                    </div>
+                    <div class="statistics__paragraph-text">
+                        items for sale
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/libs.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
