--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
                     <form class="create__search-form">
 
                         <input class="create__search-input" type="text" placeholder="Search your products..." required>
-                        <div class="create__search-click"> <span> All </span>Categories
+                        <div class="create__search-click">  All Categories
                             <ul class="create__search-categories">
                                 <li class="create__search-category">first</li>
                                 <li class="create__search-category">second</li>
@@ -315,7 +315,15 @@
             <div class="newest__inner">
                 <div class="newest__title title">
                     <div class="newest__title-text">Your Followers Feed</div>
-                    <div class="newest__filter">Filter by:
+                    <div class="newest__click">Filter by:
+                        <ul class="newest__filters">
+                            <li class="newest__filter">first</li>
+                            <li class="newest__filter">second</li>
+                            <li class="newest__filter">third</li>
+                            <li class="newest__filter">fourth</li>
+                            <li class="newest__filter">fifth</li>
+                        </ul>
+
                         <div class="newest__filter-dots">
                             <div class="newest__filter-dot"></div>
                             <div class="newest__filter-dot"></div>
@@ -797,37 +805,143 @@
                 <div class="statistics__paragraph statistics__paragraph-cloud">
                     <img src="img/cloud-download.svg" alt="" class="statistics__paragraph-img">
                     <div class="statistics__paragraph-title">
-                        38,463
+                        3,736
                     </div>
                     <div class="statistics__paragraph-text">
-                        items for sale
+                        total sales
                     </div>
                 </div>
 
                 <div class="statistics__paragraph statistics__paragraph-smile">
                     <img src="img/smile.svg" alt="" class="statistics__paragraph-img">
                     <div class="statistics__paragraph-title">
-                        38,463
+                        2,736
                     </div>
                     <div class="statistics__paragraph-text">
-                        items for sale
+                        happy customers
                     </div>
                 </div>
 
                 <div class="statistics__paragraph statistics__paragraph-users">
                     <img src="img/users.svg" alt="" class="statistics__paragraph-img">
                     <div class="statistics__paragraph-title">
-                        38,463
+                        25,736
                     </div>
                     <div class="statistics__paragraph-text">
-                        items for sale
+                        members
                     </div>
                 </div>
             </div>
         </div>
 
     </section>
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages__inner">
+                <div class="advantages__title">
+                    Why Choose
+                    <span class="advantages__title-span">
+                        MartPlace
+                    </span>
+                </div>
+                <div class="advantages__text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                    the mattis, leo quam aliquet diam
+                    congue is laoreet elit metus.
+                </div>
+                <div class="advantages__block-inner">
+                    <div class="advantages__block">
+                        <div class="advantages__block-num">01</div>
+                        <img class="advantages__block-img" src="img/license.svg" alt="">
+                        <div class="advantages__block-title">One Time Payment</div>
+                        <div class="advantages__block-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
+                            justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.</div>
+                    </div>
 
+                    <div class="advantages__block">
+                        <div class="advantages__block-num">02</div>
+                        <img class="advantages__block-img advantages__block-img--magic" src="img/magic-wand.svg" alt="">
+                        <div class="advantages__block-title advantages__block-title--magic">Quality Products</div>
+                        <div class="advantages__block-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
+                            justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.</div>
+                    </div>
+
+                    <div class="advantages__block">
+                        <div class="advantages__block-num">03</div>
+                        <img class="advantages__block-img advantages__block-img--lock" src="img/lock.svg" alt="">
+                        <div class="advantages__block-title">100% Secure Payment</div>
+                        <div class="advantages__block-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
+                            justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.</div>
+                    </div>
+
+                    <div class="advantages__block">
+                        <div class="advantages__block-num">04</div>
+                        <img class="advantages__block-img" src="img/chart-bars.svg" alt="">
+                        <div class="advantages__block-title">Well Organized Code</div>
+                        <div class="advantages__block-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
+                            justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.</div>
+                    </div>
+
+                    <div class="advantages__block">
+                        <div class="advantages__block-num">05</div>
+                        <img class="advantages__block-img" src="img/leaf.svg" alt="">
+                        <div class="advantages__block-title">Life Time Free Update</div>
+                        <div class="advantages__block-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
+                            justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.</div>
+                    </div>
+
+                    <div class="advantages__block">
+                        <div class="advantages__block-num">06</div>
+                        <img class="advantages__block-img advantages__block-img--phone" src="img/phone.svg" alt="">
+                        <div class="advantages__block-title">Fast and Friendly Support</div>
+                        <div class="advantages__block-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
+                            justo ut scelerisque
+                            the mattis, leo quam aliquet diam
+                            congue is laoreet elit metus.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sell" style="background-image: url(img/sell-start-bg.jpg);">
+            <div class="sell__inner">
+
+                <div class="sell__piece">
+                    <img class="sell__piece-img" src="img/computer.svg" alt="">
+                    <div class="sell__piece-title">
+                        Sell Your Products
+                    </div>
+                    <div class="sell__piece-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diamcongue is laoreet elit metus.
+                    </div>
+                    <a class="sell__piece-link" href="#">Become an Author</a>
+                </div>
+
+                <div class="sell__piece">
+                    <img class="sell__piece-img" src="img/buy.svg" alt="">
+                    <div class="sell__piece-title">
+                        Start Shopping Today
+                    </div>
+                    <div class="sell__piece-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                        the mattis, leo quam aliquet diamcongue is laoreet elit metus.
+                    </div>
+                    <a class="sell__piece-link sell__piece-link--start" href="#">Start Shopping</a>
+                </div>
+
+            </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
