--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
                     <form class="create__search-form">
 
                         <input class="create__search-input" type="text" placeholder="Search your products..." required>
-                        <div class="create__search-click">  All Categories
+                        <div class="create__search-click"> All Categories
                             <ul class="create__search-categories">
                                 <li class="create__search-category">first</li>
                                 <li class="create__search-category">second</li>
@@ -914,35 +914,101 @@
         </div>
     </section>
     <section class="sell" style="background-image: url(img/sell-start-bg.jpg);">
-            <div class="sell__inner">
+        <div class="sell__inner">
 
-                <div class="sell__piece">
-                    <img class="sell__piece-img" src="img/computer.svg" alt="">
-                    <div class="sell__piece-title">
-                        Sell Your Products
-                    </div>
-                    <div class="sell__piece-text">
-                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
-                        the mattis, leo quam aliquet diamcongue is laoreet elit metus.
-                    </div>
-                    <a class="sell__piece-link" href="#">Become an Author</a>
+            <div class="sell__piece">
+                <img class="sell__piece-img" src="img/computer.svg" alt="">
+                <div class="sell__piece-title">
+                    Sell Your Products
                 </div>
-
-                <div class="sell__piece">
-                    <img class="sell__piece-img" src="img/buy.svg" alt="">
-                    <div class="sell__piece-title">
-                        Start Shopping Today
-                    </div>
-                    <div class="sell__piece-text">
-                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
-                        the mattis, leo quam aliquet diamcongue is laoreet elit metus.
-                    </div>
-                    <a class="sell__piece-link sell__piece-link--start" href="#">Start Shopping</a>
+                <div class="sell__piece-text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                    the mattis, leo quam aliquet diamcongue is laoreet elit metus.
                 </div>
-
+                <a class="sell__piece-link" href="#">Become an Author</a>
             </div>
+
+            <div class="sell__piece">
+                <img class="sell__piece-img" src="img/buy.svg" alt="">
+                <div class="sell__piece-title">
+                    Start Shopping Today
+                </div>
+                <div class="sell__piece-text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                    the mattis, leo quam aliquet diamcongue is laoreet elit metus.
+                </div>
+                <a class="sell__piece-link sell__piece-link--start" href="#">Start Shopping</a>
+            </div>
+
+        </div>
     </section>
 
+    <section class="feedback">
+        <div class="container">
+            <div class="feedback__inner">
+                <div class="feedback__title">
+                    Our Clients <span>Feedback</span>
+                </div>
+                <div class="feedback__text">
+                    Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores
+                    nemis omnis fugats. Lid est laborum dolo rumes fugats untras.
+                </div>
+                <div class="feedback__box">
+                    <div class="feedback__item">
+                        <div class="feedback__item-top">
+                            <a class="feedback__item-link" href="#">
+                                <img class="feedback__item-img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="feedback__item-author">
+                                    <div class="feedback__item-name">Taofiqul Hakim</div>
+                                    <div class="feedback__item-profession">Product Designer</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="feedback__item-text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo
+                            ut scelerisque the mattis, leo quam aliquet diam congue is the laoreet elit metus. Nunc
+                            placerat
+                            mi is id nisi interdum is mollis. Praesent the pharetra, justo ut scelerisque.
+                        </div>
+                    </div>
+
+                    <div class="feedback__item">
+                        <div class="feedback__item-top">
+                            <a class="feedback__item-link" href="#">
+                                <img class="feedback__item-img" src="img/photo_2019-10-11_12-35-15.jpg" alt="">
+                                <div class="feedback__item-author">
+                                    <div class="feedback__item-name">Taofiqul Hakim</div>
+                                    <div class="feedback__item-profession">Product Designer</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="feedback__item-text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo
+                            ut scelerisque the mattis, leo quam aliquet diam congue is the laoreet elit metus. Nunc
+                            placerat
+                            mi is id nisi interdum is mollis. Praesent the pharetra, justo ut scelerisque.
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="feedback__btn">View All Reviews</a>
+            </div>
+        </div>
+    </section>
+    <section class="news"></section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
