--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
                                 <ul class="navigation__menu">
                                     <li class="navigation__points">
                                         <a href="#">
-                                            HOME
+                                            Home
                                         </a>
                                     </li>
                                     <li class="navigation__points">
@@ -635,7 +635,7 @@
                                             Live Demo
                                         </a>
 
-                                        <img class="newest__card-img img" src="img/ducks-bg.jpg" alt="card-img">
+                                        <img class="newest__card-img img" src="img/product-item.jpg" alt="card-img">
                                     </a>
 
 
@@ -677,8 +677,8 @@
                                         <a href="#" class="newest__card-live live">
                                             Live Demo
                                         </a>
-
                                         <img class="newest__card-img img" src="img/ducks-bg.jpg" alt="card-img">
+
                                     </a>
 
 
@@ -712,8 +712,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <button class="newest__tag newest__tag-bottom" type="button" data-filter="all">All New
-                                Products</button>
+                            <a class="newest__tag newest__tag-bottom" href="#">
+                                All New
+                                Products
+                            </a>
 
                         </div>
                     </div>
