--- a/app/new-items-grid.html
+++ b/app/new-items-grid.html
@@ -26,17 +26,17 @@
                             <a class="header__become" href="#">Become a Seller</a>
                             <div class="header__icons">
                                 <a class="header__icons-noti" href="#">
-                                    <span class="header__icons-noti--span">
+                                    <span class="header__icons-noti-span">
                                         25
                                     </span>
                                 </a>
                                 <a class="header__icons-mail" href="#">
-                                    <span class="header__icons-mail--span">
+                                    <span class="header__icons-mail-span">
                                         6
                                     </span>
                                 </a>
                                 <a class="header__icons-cart" href="#">
-                                    <span class="header__icons-cart--span">
+                                    <span class="header__icons-cart-span">
                                         2
                                     </span>
                                 </a>
